stDemoOne/force-app/main/default/objects/Knowledge__kav/fields/gps_Image__c.field-meta.xml
<CustomField>
    <fullName>gps_Image__c</fullName>
    <label>Image</label>
    <type>Url</type>
</CustomField>