stDemoOne/force-app/main/default/objects/Knowledge__kav/fields/gps_Is_a_Top_10_FAQ__c.field-meta.xml
<CustomField>
    <fullName>gps_Is_a_Top_10_FAQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Top 10 FAQ</label>
    <type>Checkbox</type>
</CustomField>