stDemoOne/force-app/main/default/objects/Knowledge__kav/fields/gps_Is_Top_Ten_LPI__c.field-meta.xml
<CustomField>
    <fullName>gps_Is_Top_Ten_LPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Top Ten LPI</label>
    <type>Checkbox</type>
</CustomField>