stDemoOne/force-app/main/default/objects/Knowledge__kav/listViews/Emergency_Response.listView-meta.xml
<ListView>
    <fullName>Emergency_Response</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABSTRACT</field>
        <operation>contains</operation>
        <value>Emergency Response</value>
    </filters>
    <label>Emergency Response</label>
</ListView>