stDemoOne/force-app/main/default/objects/Knowledge__kav/listViews/published_articles.listView-meta.xml
<ListView>
    <fullName>published_articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <columns>IS_CHANNEL_APP</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PRM</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>LAST_PUBLISHED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/9/2024 12:00 AM</value>
    </filters>
    <label>Published Articles</label>
</ListView>