stDemoOne/force-app/main/default/objects/Knowledge__kav/listViews/Top_10_FAQ_s_for_LPI_Community.listView-meta.xml
<ListView>
    <fullName>Top_10_FAQ_s_for_LPI_Community</fullName>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>gps_Is_Top_Ten_LPI__c</columns>
    <columns>gps_Image__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>gps_Is_Top_Ten_LPI__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Top 10 FAQ&apos;s for LPI Community</label>
</ListView>